tests/fail/fail_return_type_mismatch.kl
fn inisiu() {
    nter a = 3;
    si dobra(a) == 6 {
        nter aa = dobra(a);
        mostran(f"{aa}");
    } sinon {
        mostran("Nau");
    }
}

fn dobra(nter x) nter {
    divolvi 3 * 2;
}
